--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -42,13 +42,9 @@
             </div>
           </div>
         </div>    
-       
-       
+        <button class="btn btn-primary" (click)="onEditEvent()">Edit element</button>
+        <button class="btn btn-danger" (click)="onDelete()">Delete element</button>
           <!-- <span class="base-color">{{eventData?.dates?.start?.localDate|date : 'fullDate'}}</span> -->
-         
-
-
-       
         </div>
       </div>
       </div>
