--- a/src/app/components/event-list/event-list.component.html
+++ b/src/app/components/event-list/event-list.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <div *ngIf="message" class="alert alert-warning alert-dismissible show" role="alert">
+    <strong>Opps</strong> {{message}}
+    <button type="button" class="btn-close" (click)="dismissAlert()" aria-label="Close"></button>
+  </div>
     <div class="row text-center">
         <div class="col-md-6 col-lg-3 p-2 col-sm-12" *ngFor="let event of eventList">
           <div class="card" style="width: 18rem">
