--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,11 +1,9 @@
 <div class="wrapper">
       <app-hero [title]="event?.name"></app-hero>  
-
     <div class="container p-2 mt-4">
       <div class="row bg-light pt-2">
         <div class="col-4">
-          <img
-            class="card-img-top p-2"
+          <img class="card-img-top p-2"
             src={{event?.urlImg}}
             alt="Card image cap"/>
 
