--- a/src/app/components/event-form/event-form.component.scss
+++ b/src/app/components/event-form/event-form.component.scss
@@ -2,3 +2,11 @@ i{
     font-size: 1.2rem;
     cursor: pointer;
 }
+.custom-dialog-container .mat-dialog-container {
+    height: 100vh !important;
+ }
+ ::ng-deep .my-custom-dialog-class {
+    mat-dialog-container {
+        height: 100vh !important;
+    }
+  }
