--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,45 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
-    <div class="container">
-      <a class="navbar-brand" routerlink="" href="/home">
-        <img
-          src="/assets/images/logo.png"
-          width="160"
-          height="160"
-          alt="CloneBrite"
-          class="img-fluid"/></a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/about" routerLinkActive="active"
-              >About Us</a>
-          </li>   
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/about" routerLinkActive="active">
-              Set Offer
-            </a>
-          </li>
-        </ul>
-        <li class="nav-item d-flex justify-content-end">
-          <button
-          class="btn btn-primary text-center d-flex justify-content-end"
-          (click)="onCreateEvent()">
+  <div class="container">
+    <a class="navbar-brand" routerlink="" href="/home">
+      <img src="/assets/images/logo.png" width="160" height="160" alt="CloneBrite" class="img-fluid" /></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active">Set Offer</a>
+        </li>
+      </ul>
+      <li class="nav-item d-flex justify-content-end">
+        <button class="btn btn-primary text-center d-flex justify-content-end" (click)="onCreateEvent()">
           Place Event
         </button>
-        </li>   
-      </div>
+      </li>
     </div>
-  </nav>
+  </div>
+</nav>
