--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -13,3 +13,8 @@
     color: black;
     margin-bottom: 2rem;
 }
+.btn{
+    background: #ffff;
+    color: #f05538;
+    border: 1px solid #f05538;
+}
