--- a/src/app/components/event-form/event-form.component.html
+++ b/src/app/components/event-form/event-form.component.html
@@ -14,17 +14,15 @@
       <div class="card-body">
         <form [formGroup]="eventForm" (ngSubmit)="onSubmit()" class="form-group">
           <div class="row">
-            <div class="mb-3 col-12">
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="text-center">
-                    <img alt="" src="https://cdn.iconscout.com/icon/free/png-256/gallery-187-902099.png" width="128"
-                      height="128">
-                    <div class="mt-2">
-                      <span class="btn btn-primary"><i class="fas fa-upload"></i> Upload</span>
-                    </div>
-                    <small>For best results, use an image at least 128px by 128px in .jpg format</small>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="text-center">
+                  <img alt="" src="https://cdn.iconscout.com/icon/free/png-256/gallery-187-902099.png" width="128"
+                    height="128">
+                  <div class="mt-2">
+                    <span class="btn btn-primary"><i class="fas fa-upload"></i> Upload</span>
                   </div>
+                  <small>For best results, use an image at least 128px by 128px in .jpg format</small>
                 </div>
               </div>
             </div>
@@ -75,25 +73,34 @@
                   <textarea id="description" type="text" formControlName="description" class="form-control"></textarea>
                 </div>
               </div>
-            </div>
-          </div>
-          <div formGroupName="address" class="row">
-            <legend>Address</legend>
-            <div class="col-12">
-              <label for="city">city</label>
-              <input id="city" type="text" formControlName="city" class="form-control">
-            </div>
-            <div class="col-12">
-              <label for="county">county</label>
-              <input id="county" type="text" formControlName="county" class="form-control">
-            </div>
-            <div class="col-12">
-              <label for="line1">line1</label>
-              <input id="line1" type="text" formControlName="line1" class="form-control">
-            </div>
-            <div class="col-12">
-              <label for="eircode">eircode</label>
-              <input id="eircode" type="text" formControlName="eircode" class="form-control">
+              <div formGroupName="address">
+                <div class="mb-3 col-12 mt-3">
+                  <legend>Address</legend>
+                  <div class="col-12">
+                    <label for="city">city</label>
+                    <input id="city" type="text" formControlName="city" class="form-control">
+                  </div>
+                  <div class="col-12">
+                    <label for="county">county</label>
+                    <input id="county" type="text" formControlName="county" class="form-control">
+                  </div>
+                  <div class="col-12">
+                    <label for="line1">line1</label>
+                    <input id="line1" type="text" formControlName="line1" class="form-control">
+                  </div>
+                  <div class="col-12">
+                    <label for="eircode">eircode</label>
+                    <input id="eircode" type="text" formControlName="eircode" class="form-control">
+                  </div>
+
+                  <div class="mb-3">
+                    <label for="image">Image file</label>
+                    <input id="image" type="file" id="image" (change)="onFileUpload($event)" formControlName="image" class="form-control">
+                  </div>
+
+                  
+                </div>
+              </div>
             </div>
           </div>
           <div class="mb-12">
