update button name

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -20,7 +20,7 @@
       </ul>
       <li class="nav-item d-flex justify-content-end">
         <button class="btn btn-primary text-center d-flex justify-content-end" (click)="onCreateEvent()">
-          Place Event
+          Create Event
         </button>
       </li>
     </div>
