--- a/src/app/components/event-form/event-form.component.html
+++ b/src/app/components/event-form/event-form.component.html
@@ -9,21 +9,13 @@
             </a>
           </div>
         </div>
-        <h5 class="card-title mb-0">{{formTitle}}</h5>
+        <h5 class="card-title mb-0">EVENT FORM</h5>
       </div>
       <div class="card-body">
         <form [formGroup]="eventForm" (ngSubmit)="onSubmit()" class="form-group">
           <div class="row">
             <div class="row">
               <div class="col-md-12">
-                <div class="text-center">
-                  <img alt="" src="https://cdn.iconscout.com/icon/free/png-256/gallery-187-902099.png" width="128"
-                    height="128">
-                  <div class="mt-2">
-                    <span class="btn btn-primary"><i class="fas fa-upload"></i> Upload</span>
-                  </div>
-                  <small>For best results, use an image at least 128px by 128px in .jpg format</small>
-                </div>
               </div>
             </div>
             <div class="col-3">
@@ -103,10 +95,10 @@
               </div>
             </div>
           </div>
-          <div class="mb-12">
+          <!-- <div class="mb-12">
             <label for="urlImg">urlImg</label>
             <input id="urlImg" type="text" formControlName="urlImg" class="form-control">
-          </div>
+          </div> -->
           <div class="row">
             <div class="col-6 text-center d-flex justify-content-start">
               <button class="btn btn-outline-secondary" type="button" (click)="onCancel()">Cancel</button>
