change nav style

--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -281,3 +281,9 @@ fa-icon{
 .container{
 	max-width: 1200px;
 }
+
+.profileBtn{
+	background-color: white;
+	color: black;
+	// border: 1px solid gray;
+}
