--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -19,10 +19,12 @@
         </li>
       </ul>
       <li class="nav-item d-flex justify-content-end">
-        <button class="btn btn-primary text-center d-flex justify-content-end" (click)="onCreateEvent()">
+        <button
+          *ngIf="userRole === 'admin'"
+          class="btn btn-primary text-center d-flex justify-content-end"
+          (click)="onCreateEvent()">
           Create Event
         </button>
-  
       </li>
       <li class="nav-item d-flex justify-content-end">
         <button class="btn btn-primary text-center d-flex justify-content-end" (click)="logout()">
