--- a/src/app/components/begin/begin.component.html
+++ b/src/app/components/begin/begin.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-white">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container">
     <a class="navbar-brand" routerlink="" href="/home">
       <img src="/assets/images/logo.png" width="160" height="160" alt="CloneBrite" class="img-fluid" /></a>
@@ -60,4 +60,4 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
