--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
+<amplify-authenticator>
+    <ng-template
+      amplifySlot="authenticated"
+      let-user="user"
+      let-signOut="signOut">
+
+      <app-home></app-home>
+      <button (click)="signOut()">Sign Out</button>
+    </ng-template>
+  </amplify-authenticator>
+
 <router-outlet></router-outlet>
 
 
