--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link" routerLink="/about" routerLinkActive="active">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about" routerLinkActive="active">Set Offer</a>
+          <a class="nav-link" routerLink="/login" routerLinkActive="active">Set Offer</a>
         </li>
       </ul>
       <li class="nav-item d-flex justify-content-end">
