--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
   <div class="container">
     <form id="search-form">
       <h3 class="mt-5" style="text-align: center; margin-top: 0.4rem">
-        Welcome <span *ngIf="auth.user$ | async as user">{{ user.given_name }}</span> to <br> Event Management Portal
+        Welcome to <br> Event Management Portal
       </h3>
       <div class="align-items-center">
         <div class="row justify-content-center">
