--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -27,7 +27,7 @@
         </button>
       </li>
       <li class="nav-item d-flex justify-content-end">
-        <button class="btn btn-primary text-center d-flex justify-content-end" (click)="logout()">
+        <button class="btn btn-primary text-center d-flex justify-content-end">
           LogOut
         </button>
       </li>
@@ -35,8 +35,7 @@
         <button class="btn btn-primary profileBtn text-center d-flex justify-content-end">
           <a mat-button data-toggle="dropdown"
           class="nav-item nav-link dropdown-toggle user-action">
-            <img  src="" class="avatar" alt="Avatar" src="{{user.picture}}"
-            *ngIf="auth.user$ | async as user">    <span *ngIf="auth.user$ | async as user">{{ user.given_name }}</span><b class="caret"></b></a>
+            <img  src="" class="avatar" alt="Avatar" src="">   <b class="caret"></b></a>
         </button>
       </li>
     </div>
