--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -27,7 +27,7 @@
         </button>
       </li>
       <li class="nav-item d-flex justify-content-end">
-        <button class="btn btn-primary text-center d-flex justify-content-end">
+        <button class="btn btn-primary text-center d-flex justify-content-end" (click)="Logout()">
           LogOut
         </button>
       </li>
