--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -3,6 +3,6 @@
   }
   
   .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-image: url('https://c1.thejournal.ie/media/2020/06/kin-3-752x501.png');
     background-size: cover;
   }
