--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container">
     <a class="navbar-brand" routerlink="" href="/home">
-      <img src="/assets/images/logo.png" width="160" height="160" alt="CloneBrite" class="img-fluid" /></a>
+      <img src="/assets/images/easyeventlogo.png" width="160" height="160" alt="CloneBrite" class="img-fluid" /></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
