--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,15 @@
   [signUpAttributes]="[  'name',  'email',  'family_name' ]"
   [socialProviders]="['google']">
     <ng-template
-      amplifySlot="authenticated"
-      let-user="user"
-      let-signOut="signOut">
+    amplifySlot="authenticated"
+    let-user="user"
+    let-signOut="signOut">
+    <div  *ngIf="user.signInUserSession.accessToken.payload['cognito:groups'][0]=='manager'">
+       {{onCheckRoute('manager')?onCheckRoute('manager'):""}}
+    </div>
+    <div *ngIf="user.signInUserSession.accessToken.payload['cognito:groups'][0]=='user'">
+      {{onCheckRoute('user')?onCheckRoute('user'):""}}
+    </div >
     </ng-template>
   </amplify-authenticator>
 </div>
