--- a/src/app/components/event/event.component.html
+++ b/src/app/components/event/event.component.html
@@ -20,7 +20,7 @@
     </div>
   </div> -->
 
-  <mat-card class="example-card">
+  <mat-card class="example-card custom-card">
     <mat-card-header>
       <div mat-card-avatar class="example-header-image"></div>
       <mat-card-title>Shiba Inu</mat-card-title>
@@ -28,13 +28,16 @@
     </mat-card-header>
     <img mat-card-image src="https://s3-images-web-ca2.s3.eu-west-1.amazonaws.com/{{event?.urlImg}}" alt="Photo of a Shiba Inu">
     <mat-card-content>
+      <p class="card-text time-stamp"> {{event?.eventDateStarts | date }} at {{event?.eventDateStarts |date:'shortTime'}}</p>
       <p class="card-title">{{ event?.name }}</p>
-        <p class="card-text"> {{event?.eventDateStarts | date }} at {{event?.eventDateStarts |date:'shortTime'}}</p>
-        <p class="card-text text-muted"> {{event?.address?.line1}},{{event?.address?.city}}</p>    
+        <p class="card-text text-muted card-sub-information"> {{event?.address?.line1}},{{event?.address?.city}}</p>    
         <p class="card-text text-muted">Starts at {{event?.startsPrice | currency:'EUR':true}}</p>    
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button [routerLink]="['/events', event?._id]">See event</button>
-      <!-- <button mat-button (click)="onCreateEvent(event?._id)">See event</button> -->
-    </mat-card-actions>
+    <!-- <mat-card-actions>
+      <button mat-button [routerLink]="['/events', event?._id]">SEE EVENT</button>
+      <button mat-button >SAVE TO FAVOURITE</button>
+    </mat-card-actions> -->
   </mat-card>
+
+
+ 
