--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -72,7 +72,12 @@
   </button>
   <form class="navbar-form form-inline">
     <div class="input-group search-box">
-      <input type="text" id="search" class="form-control" placeholder="Search here..." />
+      <input
+                type="text"
+                class="form-control"
+                id="location"
+                placeholder="Search for city or event name"
+                #search (keyup)="getEventByLocationOrName(search?.value)"/>
       <span class="input-group-addon"><i class="material-icons">&#xE8B6;</i></span>
     </div>
   </form>
@@ -97,7 +102,12 @@
 </button>
 <form class="navbar-form form-inline">
   <div class="input-group search-box">
-    <input type="text" id="search" class="form-control" placeholder="Search here..." />
+    <input
+    type="text"
+    class="form-control"
+    id="location"
+    placeholder="Search for city or event name"
+    #search (keyup)="getEventByLocationOrName(search?.value)"/>
     <span class="input-group-addon"><i class="material-icons">&#xE8B6;</i></span>
   </div>
 </form>
